# LCRmeter_GWinstek76100

./: .gitignore  csv_file2023-01-30  hz.py  main.py  pyproject.toml  re_inout  readme.md  requirements.txt  ~$струкция для пользователей.docx  инструкция для пользователей.docx
app/: main.py
app/gui/: GWinstek.py  GWinstek.ui  GWinstekUi.py
app/lcrmeter/tools/auto_experiments/: auto_experiments.py
app/lcrmeter/tools/utils/: main_utils.py
app/models/: randles.py  voit.py
app/tools/: __init__.py  auto_experiments.py  main_utils.py
tests/test_31_10/: Measerment for MCE.md
рабочий гит/LCRmeter_GWinstek76100/: .gitignore
рабочий гит/LCRmeter_GWinstek76100/app/: main.py
рабочий гит/LCRmeter_GWinstek76100/app/gui/: GWinstek_ui.py
рабочий гит/LCRmeter_GWinstek76100/app/gui_v2/: GWinstek.ui  GWinstekUi.py  GWinstekUi_plot.py  GWinstek_plot.ui  GWinstek_plot_ui.py  GWinstek_ui.py  createPyUi.bat
