[tool.poetry]
name = "lcrmeter-gwinstek76100"
version = "0.1.0"
description = ""
authors = ["Eugene Popov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyqt6 = "^6.5.2"
numpy = "^1.26.0"
pyqtgraph = "^0.13.3"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
